--- a/RNRecordAudio/package.json
+++ b/RNRecordAudio/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-record-audio-ios",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "A react-native interface for recording audio on an ios device. Supports .caf, .m4a, and .wav files.",
   "main": "index.ios.js",
   "scripts": {
@@ -27,8 +27,8 @@
     "url": "https://github.com/rhaker/react-native-record-audio-ios/issues"
   },
   "homepage": "https://github.com/rhaker/react-native-record-audio-ios",
-  "dependencies": {
-    "react-native": "^0.12.0"
+  "peerDependencies": {
+    "react-native": ">=0.12.0"
   },
   "devDependencies": {}
 }
